Admin apis clean up